--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Scegli una parola da censurare</h1>
-    <form action="index.php" method="post">
+    <form action="dati.php" method="post">
         <input type="text" name="censored-word">
 
         <button type="submit">
